// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeSnippet renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #1B2029;
  background-repeat: no-repeat;
  overflow: auto;
  white-space: pre;
  padding: 16px;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 0;
  column-gap: 0;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 0;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-3 {
  font-family: 'Menlo','Bitstream Vera Sans Mono','DejaVu Sans Mono','Monaco','Consolas',monospace;
  line-height: 1.4;
  font-weight: 500;
  font-size: 14px;
  color: var(--themeTextColorPrimaryInverted, #FFFFFF);
  fill: var(--themeTextColorPrimaryInverted, #FFFFFF);
  text-align: inherit;
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    >
      <div
        class="emotion-2"
        data-cy="flexItem"
      >
        <code
          class="rmTextMargins emotion-3"
          data-cy="monospaceText"
        >
          snippet content
        </code>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CodeSnippet renders with copy button 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #1B2029;
  background-repeat: no-repeat;
  overflow: auto;
  white-space: pre;
  padding: 16px;
}

.emotion-1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  height: auto;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  -webkit-column-gap: 0;
  column-gap: 0;
  row-gap: 0;
}

.emotion-1>div {
  width: auto;
}

@supports not (column-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-right: 0;
  }
}

@supports not (row-gap: 1px) {
  .emotion-1>*:not(:last-child) {
    padding-bottom: 0;
  }
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-3 {
  font-family: 'Menlo','Bitstream Vera Sans Mono','DejaVu Sans Mono','Monaco','Consolas',monospace;
  line-height: 1.4;
  font-weight: 500;
  font-size: 14px;
  color: var(--themeTextColorPrimaryInverted, #FFFFFF);
  fill: var(--themeTextColorPrimaryInverted, #FFFFFF);
  text-align: inherit;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
}

.emotion-5 {
  background-repeat: no-repeat;
  display: inline-block;
}

.emotion-6 {
  background-repeat: no-repeat;
  display: inline-block;
  cursor: pointer;
}

.emotion-7 {
  vertical-align: middle;
  fill: var(--themeTextColorPrimaryInverted, #FFFFFF);
}

.emotion-7 use {
  pointer-events: none;
}

<div
    class="emotion-0"
    data-cy="spacingBox"
  >
    <div
      class="emotion-1"
      data-cy="flex"
    >
      <div
        class="emotion-2"
        data-cy="flexItem"
      >
        <code
          class="rmTextMargins emotion-3"
          data-cy="monospaceText"
        >
          snippet content
        </code>
      </div>
      <div
        class="emotion-4"
        data-cy="flexItem"
      >
        <div
          class="emotion-5"
          data-cy="box"
        >
          <span
            data-cy="tooltip"
          >
            <div>
              <span
                aria-describedby="copyTooltip1"
                class="emotion-6"
                data-cy="box"
                role="button"
                tabindex="0"
              >
                <svg
                  aria-label="system-clipboard icon"
                  class="emotion-7"
                  data-cy="icon"
                  height="24"
                  preserveAspectRatio="xMinYMin meet"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <use
                    xlink:href="#system-clipboard"
                  />
                </svg>
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
